[metadata]
name = PropertyExtract
version = 1.25
description="PropertyExtract -- LLM-based model to extract material property from unstructured dataset",
author = Chinedu Ekuma
author_email = cekuma1@gmail.com
url = https://sourceforge.net/projects/propertyextract/
license = GNU GPL version 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
scripts =
    src/propertyextract
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    spglib
    mendeleev
    openai
    nltk
    spacy
    urllib3
    textblob
    google-generativeai
    backoff
    chardet

[options.packages.find]
where = src

